# formanator

./: .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .tool-versions  AGENTS.md  Cargo.toml  LICENSE.md  README.fr.md  README.md  eslint.config.mjs  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
.claude/: settings.json
.github/workflows/: build-binaries.yml  build-test-and-lint.yml  build_and_release.yml  codeql-analysis.yml  copilot-setup-steps.yml  pre-commit.yml  release.yml
__mocks__/: axios.js  chalk.js  fs.js  os.js  prompt-sync.js
coverage/: index.html  lcov.info
coverage/lcov-report/: index.html
coverage/src/: claims.ts.html  config.ts.html  forma.ts.html  index.html  openai.ts.html  utils.ts.html
script/: generate-version-file.cjs
src/: api-helpers.ts  claims.rs  claims.test.ts  claims.ts  cli.rs  config.rs  config.test.ts  config.ts  forma.rs  forma.test.ts  forma.ts  index.ts  keychain.rs  lib.rs  llm.rs  main.rs  mcp.rs  openai.ts  prompt.rs  receipts.ts  schemas.ts  update_check.rs  utils.test.ts  utils.ts  verbose.rs  version.ts
src/__tests__/: claims.test.ts  config.test.ts  openai.test.ts  utils.test.ts
src/commands/: benefits.rs  benefits.ts  categories.rs  categories.ts  claim.ts  generate-template-csv.ts  generate_template_csv.rs  list-claims.ts  list_claims.rs  login.rs  login.test.ts  login.ts  mcp.ts  mod.rs  submit-claim.ts  submit-claims-from-csv.ts  submit-claims-from-directory.ts  submit-receipts-from-directory.ts  submit_claim.rs  submit_claims_from_csv.rs  submit_claims_from_directory.rs  validate-csv.test.ts  validate-csv.ts  validate_csv.rs
src/integrations/: provider.ts  registry.ts
tests/: cli.rs  forma_api.rs  llm_api.rs
tests/common/: mod.rs
tests/fixtures/: README.md  claims_list_in_progress.json  claims_list_page0.json  claims_list_page1.json  create_claim_response_success.json  create_claim_response_unsuccessful.json  error_generic.json  error_invalid_jwt.json  error_unknown_shape.json  llm_category_inference_response.json  template.csv  (+5 more)
(+29 files in other folders)
